[package]
name = "libnl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winnow = {version="0.5", features=["std", "alloc", "simd"] }
rust_decimal = "1.33"
glob = "0.3"

[build-dependencies]
bindgen = "0.65.1"